# amlicPrefillDecodeDisaggregation

./: .env.example  .gitignore  README.md  SETUP_STATUS.md  pyproject.toml  task.md.resolved
analysis/: compute_threshold.py  plot_results.py
benchmark/: amlic_benchmark.py  client.py  runner.py  workloads.py
benchmark/prompts/: pg_essays.txt
benchmark/results/: collocated_20260426_044047.csv  collocated_20260426_044047_summary.json  collocated_cold_20260426_044558.csv  collocated_cold_20260426_044558_summary.json  collocated_cold_extended_20260426_050838.csv  collocated_cold_extended_20260426_050838_summary.json  collocated_prefix_cache_20260426_051527.csv  collocated_prefix_cache_20260426_051527_summary.json  lmcache_20260426_040713.csv  lmcache_20260426_040713_summary.json  lmcache_cold_20260426_043507.csv  lmcache_cold_20260426_043507_summary.json  lmcache_cold_extended_20260426_050223.csv  lmcache_cold_extended_20260426_050223_summary.json  runs.md  zmq_collocated_20260426_180425.csv
demo/: app.py
infra/: proxy_server.py  start_collocated.sh  start_decode.sh  start_decode_docker.sh  start_decode_lmcache.sh  start_prefill.sh  start_prefill_docker.sh  start_prefill_lmcache.sh  start_redis.sh  vm_bootstrap.sh
infra/configs/: lmcache-decoder-config.yaml  lmcache-prefiller-config.yaml
router/: router.py
scripts/: health_check.sh  krv2123_gcp_gpu_checker.py  net_benchmark.sh  run_full_benchmark.sh  start_amlic.py  test_disagg_lmcache.sh
